Bug 150375 - kate doesn't save document URLs when session save
Summary: kate doesn't save document URLs when session save
Status: RESOLVED FIXED
Alias: None
Product: kate
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: KWrite Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2007-10-01 14:50 UTC by Mikhail Rogozhin
Modified: 2007-11-10 15:33 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Mikhail Rogozhin 2007-10-01 14:50:19 UTC
Version:            (using KDE Devel)
Installed from:    Compiled sources
Compiler:          mingw32 gcc version 3.4.2 
OS:                MS Windows

This bug occurs only on Windows

steps to reproduce
1. start Kate
2. open some files 
3. Session->Save
 ACT: session saved, but URLs of document are absent in .session file

It seems that bug occurs because of this: http://websvn.kde.org/trunk/KDE/kdelibs/kate/document/katedocument.cpp?r1=607529&r2=613644  

This code checks if  document is temporary file. But doesn't works right on Windows because in Windows absolute path doesn't start with '/'
Comment 1 Christian Ehrlicher 2007-10-29 14:47:10 UTC
This was a bug in katepart - should be fixed now. plz. check with current svn.
Comment 2 Christian Ehrlicher 2007-10-29 14:54:02 UTC
Sorry, wrong bug. I'll fix this issue asap
Comment 3 Christian Ehrlicher 2007-11-10 15:33:50 UTC
SVN commit 734930 by chehrlic:

fix saving config file on windows

BUG: 150375

 M  +1 -1      katedocument.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=734930