fix saving config file on windows

BUG: 150375

svn path=/trunk/KDE/kdelibs/kate/; revision=734930